--- a/projects/08/FunctionCalls/FibonacciElement/Sys.vm
+++ b/projects/08/FunctionCalls/FibonacciElement/Sys.vm
@@ -1,15 +1,16 @@
-// This file is part of www.nand2tetris.org
-// and the book "The Elements of Computing Systems"
-// by Nisan and Schocken, MIT Press.
-// File name: projects/08/FunctionCalls/FibonacciElement/Sys.vm
+// This file is part of the materials accompanying the book
+// "The Elements of Computing Systems" by Nisan and Schocken, 
+// MIT Press 2004. Book site: http://www.idc.ac.il/tecs
+// File name: projects/08/FunctionCalls/FibonacciElement/Sys.vm.
+// Version: beta 1.4.
 
-// Pushes a constant, say n, onto the stack, and calls the Main.fibonacii
-// function, which computes the n'th element of the Fibonacci series.
-// Note that by convention, the Sys.init function is called "automatically" 
-// by the bootstrap code.
+// Pushes n onto the stack and calls the Main.fibonacii function,
+// which computes the n'th element of the Fibonacci series.
+// The Sys.init function is called "automatically" by the 
+// bootstrap code.
 
 function Sys.init 0
 push constant 4
-call Main.fibonacci 1   // computes the 4'th fibonacci element
+call Main.fibonacci 1   // Compute the 4'th fibonacci element
 label WHILE
-goto WHILE              // loops infinitely
+goto WHILE              // Loop infinitely
