apples dont compile for some reason

--- a/projects2025/09/Snake/Apple.vm
+++ b/projects2025/09/Snake/Apple.vm
@@ -1,6 +1,50 @@
 function Apple.new 0
-push constant 0
+push constant 2
 call Memory.alloc 1
 pop pointer 0
+push argument 0
+pop this 0
+push constant 20
+pop this 1
+push this 0
+push constant 1
+call Square.setType 2
+pop temp 0
 push pointer 0
+return
+function Apple.step 0
+push argument 0
+pop pointer 0
+push this 1
+push constant 1
+sub
+pop this 1
+push this 1
+push constant 0
+lt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 0
+push constant 0
+call Square.setType 2
+pop temp 0
+label IF_FALSE0
+push constant 0
+return
+function Apple.isThere 0
+push argument 0
+pop pointer 0
+push this 0
+call Square.getType 1
+push constant 1
+eq
+return
+function Apple.dispose 0
+push argument 0
+pop pointer 0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
 return
