--- a/projects2025/09/Snake/List.vm
+++ b/projects2025/09/Snake/List.vm
@@ -58,3 +58,22 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
+function List.dispose 0
+push argument 0
+pop pointer 0
+push this 1
+push constant 0
+eq
+not
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 1
+call List.dispose 1
+pop temp 0
+label IF_FALSE0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
+return
