--- a/projects2025/09/Snake/Snake.vm
+++ b/projects2025/09/Snake/Snake.vm
@@ -172,6 +172,9 @@ push local 4
 push constant 0
 call Square.setType 2
 pop temp 0
+push local 6
+call List.dispose 1
+pop temp 0
 push local 5
 push constant 0
 call List.setNext 2
