--- a/projects2025/09/Snake/Square.vm
+++ b/projects2025/09/Snake/Square.vm
@@ -1,5 +1,5 @@
 function Square.new 0
-push constant 5
+push constant 6
 call Memory.alloc 1
 pop pointer 0
 push argument 0
@@ -12,6 +12,8 @@ push argument 2
 pop this 3
 push argument 3
 pop this 4
+push constant 20
+pop this 5
 push pointer 0
 return
 function Square.getType 0
@@ -29,10 +31,367 @@ push argument 0
 pop pointer 0
 push this 4
 return
+function Square.drawApple 0
+push argument 0
+pop pointer 0
+push this 3
+push this 5
+call Math.multiply 2
+pop this 0
+push this 4
+push this 5
+call Math.multiply 2
+pop this 1
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push this 0
+push constant 5
+add
+push this 1
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 1
+add
+push this 0
+push constant 6
+add
+push this 1
+push constant 1
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 2
+add
+push this 0
+push constant 5
+add
+push this 1
+push constant 2
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 7
+add
+push this 1
+push constant 2
+add
+push this 0
+push constant 8
+add
+push this 1
+push constant 2
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 8
+add
+push this 1
+push constant 3
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 4
+add
+push this 0
+push constant 6
+add
+push this 1
+push constant 4
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 8
+add
+push this 1
+push constant 4
+add
+push this 0
+push constant 12
+add
+push this 1
+push constant 4
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 5
+add
+push this 0
+push constant 13
+add
+push this 1
+push constant 5
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 6
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 6
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 7
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 7
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 8
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 8
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 9
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 9
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 10
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 10
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 2
+add
+push this 1
+push constant 11
+add
+push this 0
+push constant 14
+add
+push this 1
+push constant 11
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 12
+add
+push this 0
+push constant 13
+add
+push this 1
+push constant 12
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 13
+add
+push this 0
+push constant 13
+add
+push this 1
+push constant 13
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 4
+add
+push this 1
+push constant 14
+add
+push this 0
+push constant 12
+add
+push this 1
+push constant 14
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 9
+add
+push this 1
+push constant 15
+add
+push this 0
+push constant 11
+add
+push this 1
+push constant 15
+add
+call Screen.drawLine 4
+pop temp 0
+push this 0
+push constant 4
+add
+push this 1
+push constant 15
+add
+push this 0
+push constant 6
+add
+push this 1
+push constant 15
+add
+call Screen.drawLine 4
+pop temp 0
+push constant 0
+return
+function Square.drawSnake 1
+push argument 0
+pop pointer 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push this 3
+push this 5
+call Math.multiply 2
+push this 4
+push this 5
+call Math.multiply 2
+push this 3
+push constant 1
+add
+push this 5
+call Math.multiply 2
+push this 4
+push constant 1
+add
+push this 5
+call Math.multiply 2
+call screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
+function Square.clearSquare 1
+push argument 0
+pop pointer 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push this 3
+push this 5
+call Math.multiply 2
+push this 4
+push this 5
+call Math.multiply 2
+push this 3
+push constant 1
+add
+push this 5
+call Math.multiply 2
+push this 4
+push constant 1
+add
+push this 5
+call Math.multiply 2
+call screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
 function Square.setType 0
 push argument 0
 pop pointer 0
 push argument 1
 pop this 2
+push this 2
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push pointer 0
+call Square.clearSquare 1
+pop temp 0
+label IF_FALSE0
+push this 2
+push constant 1
+eq
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push pointer 0
+call Square.drawApple 1
+pop temp 0
+label IF_FALSE1
+push this 2
+push constant 2
+eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push pointer 0
+call Square.drawSnake 1
+pop temp 0
+label IF_FALSE2
 push constant 0
 return
