--- a/projects2025/09/Snake/Board.vm
+++ b/projects2025/09/Snake/Board.vm
@@ -1,14 +1,23 @@
 function Board.new 4
-push constant 7
+push constant 8
 call Memory.alloc 1
 pop pointer 0
-push constant 10
+push constant 12
 pop this 3
-push constant 20
+push constant 16
 pop this 6
 push this 3
 call Array.new 1
 pop this 2
+push constant 4
+pop this 7
+push constant 20
+pop this 4
+push constant 20
+pop this 5
+push pointer 0
+call Board.printBoard 1
+pop temp 0
 push constant 0
 pop local 2
 label WHILE_EXP0
@@ -38,7 +47,7 @@ call Math.multiply 2
 add
 push this 5
 push local 2
-push constant 10
+push this 6
 call Math.multiply 2
 add
 push local 2
@@ -132,10 +141,69 @@ push argument 0
 pop pointer 0
 push this 3
 return
-function Board.printBoard 2
+function Board.printBoard 4
 push argument 0
 pop pointer 0
 call Screen.clearScreen 0
+pop temp 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push this 4
+push this 7
+sub
+pop local 0
+push this 5
+push this 7
+sub
+pop local 1
+push this 4
+push this 3
+push this 6
+call Math.multiply 2
+add
+push this 7
+add
+pop local 2
+push this 5
+push this 3
+push this 6
+call Math.multiply 2
+add
+push this 7
+add
+pop local 3
+push local 0
+push local 1
+push local 2
+push local 3
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push this 4
+pop local 0
+push this 5
+pop local 1
+push this 4
+push this 3
+push this 6
+call Math.multiply 2
+add
+pop local 2
+push this 5
+push this 3
+push this 6
+call Math.multiply 2
+add
+pop local 3
+push local 0
+push local 1
+push local 2
+push local 3
+call Screen.drawRectangle 4
 pop temp 0
 push constant 0
 return
