with score, now need to add lines

--- a/projects2025/09/Snake/Square.vm
+++ b/projects2025/09/Snake/Square.vm
@@ -310,9 +310,13 @@ push this 1
 push this 0
 push this 5
 add
+push constant 1
+sub
 push this 1
 push this 5
 add
+push constant 1
+sub
 call Screen.drawRectangle 4
 pop temp 0
 push constant 0
@@ -328,9 +332,13 @@ push this 1
 push this 0
 push this 5
 add
+push constant 1
+sub
 push this 1
 push this 5
 add
+push constant 1
+sub
 call Screen.drawRectangle 4
 pop temp 0
 push constant 0
