--- a/projects2025/09/Snake/Board.vm
+++ b/projects2025/09/Snake/Board.vm
@@ -1,20 +1,30 @@
 function Board.new 4
-push constant 8
+push constant 13
 call Memory.alloc 1
 pop pointer 0
 push constant 12
-pop this 3
+pop this 8
 push constant 16
-pop this 6
-push this 3
+pop this 11
+push this 8
 call Array.new 1
-pop this 2
-push constant 4
 pop this 7
+push constant 4
+pop this 12
 push constant 20
-pop this 4
+pop this 9
 push constant 20
+pop this 10
+push constant 5
+pop this 1
+push constant 35
+pop this 2
+push constant 10
 pop this 5
+push constant 45
+pop this 6
+push constant 20
+pop this 3
 push pointer 0
 call Board.printBoard 1
 pop temp 0
@@ -22,38 +32,38 @@ push constant 0
 pop local 2
 label WHILE_EXP0
 push local 2
-push this 3
+push this 8
 lt
 not
 if-goto WHILE_END0
-push this 3
+push this 8
 call Array.new 1
 pop local 0
 push constant 0
 pop local 3
 label WHILE_EXP1
 push local 3
-push this 3
+push this 8
 lt
 not
 if-goto WHILE_END1
 push local 3
 push local 0
 add
-push this 4
+push this 9
 push local 3
-push this 6
+push this 11
 call Math.multiply 2
 add
-push this 5
+push this 10
 push local 2
-push this 6
+push this 11
 call Math.multiply 2
 add
 push local 2
 push local 3
 push constant 0
-push this 6
+push this 11
 call Square.new 6
 pop temp 0
 pop pointer 1
@@ -66,7 +76,7 @@ pop local 3
 goto WHILE_EXP1
 label WHILE_END1
 push local 2
-push this 2
+push this 7
 add
 push local 0
 pop temp 0
@@ -84,7 +94,7 @@ return
 function Board.getSquares 0
 push argument 0
 pop pointer 0
-push this 2
+push this 7
 return
 function Board.displayScore 0
 push argument 0
@@ -125,7 +135,7 @@ function Board.getSquare 1
 push argument 0
 pop pointer 0
 push argument 1
-push this 2
+push this 7
 add
 pop pointer 1
 push that 0
@@ -139,39 +149,157 @@ return
 function Board.getNumSquares 0
 push argument 0
 pop pointer 0
+push this 8
+return
+function Board.clearText 1
+push argument 0
+pop pointer 0
+push this 1
+push this 2
+call Output.moveCursor 2
+pop temp 0
+push constant 0
+pop local 0
+label WHILE_EXP0
+push local 0
 push this 3
+lt
+not
+if-goto WHILE_END0
+push constant 32
+call Output.printChar 1
+pop temp 0
+push local 0
+push constant 1
+add
+pop local 0
+goto WHILE_EXP0
+label WHILE_END0
+push this 1
+push this 2
+call Output.moveCursor 2
+pop temp 0
+push constant 0
+return
+function Board.writeText 0
+push argument 0
+pop pointer 0
+push argument 1
+pop this 0
+push pointer 0
+call Board.clearText 1
+pop temp 0
+push argument 1
+call String.length 1
+push this 3
+gt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 3
+call String.new 1
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+goto IF_END0
+label IF_FALSE0
+push argument 1
+call Output.printString 1
+pop temp 0
+label IF_END0
+push constant 0
+return
+function Board.clearScore 0
+push argument 0
+pop pointer 0
+push this 5
+push this 6
+call Output.moveCursor 2
+pop temp 0
+push constant 32
+call Output.printChar 1
+pop temp 0
+push constant 32
+call Output.printChar 1
+pop temp 0
+push constant 32
+call Output.printChar 1
+pop temp 0
+push this 5
+push this 6
+call Output.moveCursor 2
+pop temp 0
+push constant 0
+return
+function Board.writeScore 0
+push argument 0
+pop pointer 0
+push argument 1
+pop this 4
+push pointer 0
+call Board.clearScore 1
+pop temp 0
+push argument 1
+call Output.printInt 1
+pop temp 0
+push constant 0
+return
+function Board.incScore 0
+push argument 0
+pop pointer 0
+push pointer 0
+push argument 1
+call Board.writeScore 2
+pop temp 0
+push constant 0
 return
 function Board.printBoard 4
 push argument 0
 pop pointer 0
 call Screen.clearScreen 0
 pop temp 0
+push pointer 0
+push constant 1
+call String.new 1
+push constant 97
+call String.appendChar 2
+call Board.writeText 2
+pop temp 0
+push pointer 0
+push constant 1
+call Board.writeScore 2
+pop temp 0
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push this 4
-push this 7
+push this 9
+push this 12
 sub
 pop local 0
-push this 5
-push this 7
+push this 10
+push this 12
 sub
 pop local 1
-push this 4
-push this 3
-push this 6
+push this 9
+push this 8
+push this 11
 call Math.multiply 2
 add
-push this 7
+push this 12
 add
 pop local 2
-push this 5
-push this 3
-push this 6
+push this 10
+push this 8
+push this 11
 call Math.multiply 2
 add
-push this 7
+push this 12
 add
 pop local 3
 push local 0
@@ -183,19 +311,19 @@ pop temp 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push this 4
+push this 9
 pop local 0
-push this 5
+push this 10
 pop local 1
-push this 4
-push this 3
-push this 6
+push this 9
+push this 8
+push this 11
 call Math.multiply 2
 add
 pop local 2
-push this 5
-push this 3
-push this 6
+push this 10
+push this 8
+push this 11
 call Math.multiply 2
 add
 pop local 3
