--- a/projects2025/09/Snake/Snake.vm
+++ b/projects2025/09/Snake/Snake.vm
@@ -152,6 +152,10 @@ push this 3
 push constant 1
 add
 pop this 3
+push this 2
+push this 3
+call Board.writeScore 2
+pop temp 0
 push constant 1
 return
 label IF_FALSE9
