--- a/projects2025/09/Snake/Board.vm
+++ b/projects2025/09/Snake/Board.vm
@@ -1,8 +1,8 @@
 function Board.new 4
-push constant 13
+push constant 15
 call Memory.alloc 1
 pop pointer 0
-push constant 12
+push constant 10
 pop this 8
 push constant 16
 pop this 11
@@ -11,20 +11,24 @@ call Array.new 1
 pop this 7
 push constant 4
 pop this 12
-push constant 20
+push constant 150
 pop this 9
-push constant 20
+push constant 80
 pop this 10
-push constant 5
+push constant 6
 pop this 1
-push constant 35
+push constant 20
 pop this 2
-push constant 10
+push constant 6
 pop this 5
-push constant 45
+push constant 26
 pop this 6
 push constant 20
 pop this 3
+push constant 150
+pop this 13
+push constant 0
+pop this 14
 push pointer 0
 call Board.printBoard 1
 pop temp 0
@@ -264,9 +268,21 @@ pop pointer 0
 call Screen.clearScreen 0
 pop temp 0
 push pointer 0
-push constant 1
+push constant 7
 call String.new 1
-push constant 97
+push constant 115
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
 call String.appendChar 2
 call Board.writeText 2
 pop temp 0
@@ -334,13 +350,13 @@ push local 3
 call Screen.drawRectangle 4
 pop temp 0
 push pointer 0
-push constant 250
-push constant 0
-call Board.drawShimonShocken 3
+push this 13
+push this 14
+call Board.drawNandLogo 3
 pop temp 0
 push constant 0
 return
-function Board.drawShimonShocken 0
+function Board.drawNandLogo 0
 push argument 0
 pop pointer 0
 push constant 0
