--- a/projects2025/09/Snake/Square.vm
+++ b/projects2025/09/Snake/Square.vm
@@ -1159,290 +1159,296 @@ pop temp 0
 push this 0
 push constant 8
 add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 9
+add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 10
+add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 11
+add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 12
+add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 13
+add
+push this 1
+push constant 9
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 4
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 5
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 6
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 7
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 8
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 9
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 10
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 11
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 12
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 13
+add
+push this 1
+push constant 10
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 3
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 4
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 5
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 6
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 7
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 8
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 9
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 10
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 11
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 12
+add
+push this 1
+push constant 11
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 4
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 5
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 6
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 7
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 8
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 9
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 10
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push constant 11
+add
+push this 1
+push constant 12
+add
+call Screen.drawPixel 2
+pop temp 0
+push this 0
+push this 1
+push this 0
+push this 5
+add
 push constant 1
 sub
 push this 1
-push constant 9
+push this 5
 add
-<<<<<<< HEAD
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 9
-add
-push this 1
-push constant 9
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 10
-add
-push this 1
-push constant 9
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 11
-add
-push this 1
-push constant 9
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 12
-add
-push this 1
-push constant 9
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 13
-add
-push this 1
-push constant 9
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 3
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 4
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 5
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 6
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 7
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 8
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 9
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 10
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 11
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 12
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 13
-add
-push this 1
-push constant 10
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 3
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 4
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 5
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 6
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 7
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 8
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 9
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 10
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 11
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 12
-add
-push this 1
-push constant 11
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 4
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 5
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 6
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 7
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 8
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 9
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 10
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-pop temp 0
-push this 0
-push constant 11
-add
-push this 1
-push constant 12
-add
-call Screen.drawPixel 2
-=======
 push constant 1
 sub
 call Screen.drawRectangle 4
->>>>>>> e01ab8f8c4532a1b0a3f8674173a28b39881caad
 pop temp 0
 push constant 0
 return
@@ -1451,6 +1457,20 @@ push argument 0
 pop pointer 0
 push constant 0
 call Screen.setColor 1
+pop temp 0
+push this 0
+push this 1
+push this 0
+push this 5
+add
+push constant 1
+sub
+push this 1
+push this 5
+add
+push constant 1
+sub
+call Screen.drawRectangle 4
 pop temp 0
 push this 0
 push this 1
