--- a/projects2025/11/Square/SquareGame.vm
+++ b/projects2025/11/Square/SquareGame.vm
@@ -1,4 +1,4 @@
-function new 0
+function SquareGame.new 0
 push constant 0
 push constant 0
 push constant 30
@@ -8,7 +8,7 @@ push constant 0
 pop this 2
 push pointer 0
 return
-function dispose 0
+function SquareGame.dispose 0
 call square.dispose 0
 pop temp 0
 push pointer 0
@@ -16,7 +16,7 @@ call Memory.deAlloc 1
 pop temp 0
 push constant 0
 return
-function moveSquare 0
+function SquareGame.moveSquare 0
 push this 2
 push constant 1
 eq
@@ -62,7 +62,7 @@ call Sys.wait 1
 pop temp 0
 push constant 0
 return
-function run 2
+function SquareGame.run 2
 push constant 0
 pop local 0
 label SquareGameLabel8
