added input checks

--- a/projects2025/12/Output.vm
+++ b/projects2025/12/Output.vm
@@ -1481,6 +1481,28 @@ push that 0
 return
 function Output.moveCursor 0
 push argument 0
+push constant 0
+lt
+push argument 0
+push constant 22
+gt
+or
+push argument 1
+push constant 0
+lt
+or
+push argument 1
+push constant 63
+gt
+or
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 20
+call Sys.error 1
+pop temp 0
+label IF_FALSE0
+push argument 0
 pop static 1
 push argument 1
 pop static 2
