added math and screen errors

--- a/projects2025/12/MathTest/Math.vm
+++ b/projects2025/12/MathTest/Math.vm
@@ -147,37 +147,47 @@ label IF_END1
 push local 2
 return
 function Math.divide 4
+push argument 1
 push constant 0
-pop local 3
-push argument 0
-push constant 0
-gt
+eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-push argument 0
-pop local 0
-goto IF_END0
+push constant 3
+call Sys.error 1
+pop temp 0
 label IF_FALSE0
-push constant 1
-push argument 0
-not
-add
-pop local 0
-push local 3
-not
+push constant 0
 pop local 3
-label IF_END0
-push argument 1
+push argument 0
 push constant 0
 gt
 if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
-push argument 1
-pop local 1
+push argument 0
+pop local 0
 goto IF_END1
 label IF_FALSE1
+push constant 1
+push argument 0
+not
+add
+pop local 0
+push local 3
+not
+pop local 3
+label IF_END1
+push argument 1
+push constant 0
+gt
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push argument 1
+pop local 1
+goto IF_END2
+label IF_FALSE2
 push constant 1
 push argument 1
 not
@@ -186,26 +196,36 @@ pop local 1
 push local 3
 not
 pop local 3
-label IF_END1
+label IF_END2
 push local 0
 push local 1
 call Math.dividePos 2
 pop local 2
 push local 3
-if-goto IF_TRUE2
-goto IF_FALSE2
-label IF_TRUE2
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 1
 push local 2
 not
 add
 return
-goto IF_END2
-label IF_FALSE2
+goto IF_END3
+label IF_FALSE3
 push local 2
 return
-label IF_END2
+label IF_END3
 function Math.sqrt 2
+push argument 0
+push constant 0
+lt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 4
+call Sys.error 1
+pop temp 0
+label IF_FALSE0
 push constant 0
 pop local 1
 push constant 7
@@ -238,9 +258,9 @@ sub
 push constant 0
 gt
 not
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push local 1
 push local 0
 push static 0
@@ -249,7 +269,7 @@ pop pointer 1
 push that 0
 add
 pop local 1
-label IF_FALSE0
+label IF_FALSE1
 push local 0
 push constant 1
 sub
