--- a/projects2025/12/Sys.vm
+++ b/projects2025/12/Sys.vm
@@ -29,6 +29,16 @@ label WHILE_END0
 push constant 0
 return
 function Sys.wait 5
+push argument 0
+push constant 0
+lt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 1
+call Sys.error 1
+pop temp 0
+label IF_FALSE0
 push constant 0
 pop local 1
 push constant 0
